--- a/public/update-consultant-form.html
+++ b/public/update-consultant-form.html
@@ -7,13 +7,12 @@
   <div>
     <p>
       <label>Prenom (required)</label> 
-      <input id="name" class="form-control" type="text" ng-model="consultant.Prenom" required> 
+      <input id="name" class="form-control" type="text" required ng-model="consultant.Prenom" required> 
     </p>
     <p>
       <label>Nom (required)</label> 
-      <input id="name" class="form-control" type="text" ng-model="consultant.Nom" required> 
+      <input id="name" class="form-control" type="text" required ng-model="consultant.Nom" required> 
     </p>
-    
     <p>
       <label>Projet</label> 
       <input id="name" class="form-control" type="text" ng-model="consultant.Projets"> 
