--- a/public/upload-form.html
+++ b/public/upload-form.html
@@ -1,4 +1,4 @@
-<h2>Upload File</h2>
+<h2>Upload File</h2></br></br>
 
 <div class = "row">
     <div class="col-md-6">
@@ -6,10 +6,10 @@
                     id='uploadForm' 
                     action='/upload' 
                     method='post' 
-                    encType="multipart/form-data">
+                    encType="multipart/form-data" >
                         <input type="file" name="sampleFile" /></br>
                     
-                        <input type="submit" value="Envoyer" />
+                        <input class="btn btn-success" type="submit" value="Envoyer" />
         </form>
     </div>
     <div class="col-md-3">
@@ -19,4 +19,4 @@
     </div>
     <div class="col-md-1">
     </div>
-</div>
+</div></br></br>
